--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "vue": "^3.2.37"
   },
   "devDependencies": {
+    "@types/node": "^18.11.9",
     "@vitejs/plugin-vue": "^3.0.3",
     "vite": "^3.0.7"
   }
