--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "tsc": "vue-tsc --declaration --emitDeclarationOnly",
+    "test": "vitest -w"
   },
   "dependencies": {
     "vue": "^3.2.37"
@@ -14,6 +16,8 @@
   "devDependencies": {
     "@types/node": "^18.11.9",
     "@vitejs/plugin-vue": "^3.0.3",
-    "vite": "^3.0.7"
+    "vite": "^3.0.7",
+    "vitest": "^0.25.2",
+    "vue-tsc": "^1.0.9"
   }
 }
